Fixing issue with nav remaining visible on iOS (closes #9); Updating grunt file to bundle license file;

--- a/jquery.fs.shifter.css
+++ b/jquery.fs.shifter.css
@@ -1,5 +1,5 @@
 /* 
- * Shifter v3.2.0 - 2014-10-27 
+ * Shifter v3.1.2 - 2014-10-28 
  * A jQuery plugin for simple slide-out mobile navigation. Part of the Formstone Library. 
  * http://formstone.it/shifter/ 
  * 
@@ -21,7 +21,7 @@
 .shifter-handle {
   display: none;
 }
-.shifter-active .shifter-page {
+.shifter-enabled .shifter-page {
   min-height: 100%;
   position: relative;
   z-index: 1;
@@ -30,16 +30,10 @@
   display: block;
   overflow: hidden;
 }
-.shifter-active.shifter-left .shifter-page {
+.shifter-enabled.shifter-left .shifter-page {
   box-shadow: -2px 0 2px rgba(0, 0, 0, 0.15);
 }
-.shifter-active .shifter-page,
-.shifter-active .shifter-header {
-  -webkit-transform: translate3D(0, 0, 0);
-      -ms-transform: translate3D(0, 0, 0);
-          transform: translate3D(0, 0, 0);
-}
-.shifter-active .shifter-navigation {
+.shifter-enabled .shifter-navigation {
   width: 270px;
   height: 100%;
   position: fixed;
@@ -47,19 +41,26 @@
   z-index: 0;
   background: #ffffff;
   display: block;
-  opacity: 1;
   overflow: auto;
   pointer-events: none;
+  -webkit-transition: opacity 0.001s linear 0.2s, -webkit-transform 0.2s ease;
+          transition: opacity 0.001s linear 0.2s, transform 0.2s ease;
 }
-.shifter-active .shifter-page,
-.shifter-active .shifter-header,
-.shifter-active .shifter-navigation {
+.shifter-enabled .shifter-page,
+.shifter-enabled .shifter-header,
+.shifter-enabled .shifter-navigation {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
+}
+.shifter-enabled .shifter-page,
+.shifter-enabled .shifter-header {
+  -webkit-transform: translate3D(0, 0, 0);
+      -ms-transform: translate3D(0, 0, 0);
+          transform: translate3D(0, 0, 0);
   -webkit-transition: -webkit-transform 0.2s ease;
           transition: transform 0.2s ease;
 }
-.shifter-active .shifter-handle {
+.shifter-enabled .shifter-handle {
   width: 30px;
   height: 30px;
   position: relative;
@@ -74,7 +75,7 @@
       -ms-user-select: none;
           user-select: none;
 }
-.shifter-active .shifter-handle:after {
+.shifter-enabled .shifter-handle:after {
   height: 3px;
   width: 20px;
   position: absolute;
@@ -88,7 +89,7 @@
   display: block;
   margin: auto;
 }
-.shifter-active .shifter-navigation {
+.shifter-enabled .shifter-navigation {
   right: 0;
   -webkit-transform: translate3D(0, 0, 0);
       -ms-transform: translate3D(0, 0, 0);
@@ -100,40 +101,43 @@
       -ms-transform: translate3D(-270px, 0, 0);
           transform: translate3D(-270px, 0, 0);
 }
-.shifter-active.shifter-left .shifter-navigation {
+.shifter-enabled.shifter-left .shifter-navigation {
   left: 0;
   -webkit-transform: translate3D(0, 0, 0);
       -ms-transform: translate3D(0, 0, 0);
           transform: translate3D(0, 0, 0);
 }
-.shifter-active.shifter-left.shifter-open .shifter-page,
-.shifter-active.shifter-left.shifter-open .shifter-header {
+.shifter-enabled.shifter-left.shifter-open .shifter-page,
+.shifter-enabled.shifter-left.shifter-open .shifter-header {
   -webkit-transform: translate3D(270px, 0, 0);
       -ms-transform: translate3D(270px, 0, 0);
           transform: translate3D(270px, 0, 0);
 }
 .shifter-open .shifter-navigation {
+  opacity: 1;
   pointer-events: all;
   -webkit-transform: translate3D(0, 0, 0);
       -ms-transform: translate3D(0, 0, 0);
           transform: translate3D(0, 0, 0);
+  -webkit-transition: opacity 0.001s linear 0s, -webkit-transform 0.2s ease;
+          transition: opacity 0.001s linear 0s, transform 0.2s ease;
 }
-.no-csstransforms3d .shifter-active.shifter-navigation {
+.no-csstransforms3d .shifter-enabled.shifter-navigation {
   right: -270px;
 }
-.no-csstransforms3d .shifter-active.shifter-left .shifter-navigation {
+.no-csstransforms3d .shifter-enabled.shifter-left .shifter-navigation {
   left: -270px;
 }
-.no-csstransforms3d .shifter-active.shifter-open .shifter-page {
+.no-csstransforms3d .shifter-enabled.shifter-open .shifter-page {
   left: -270px;
 }
-.no-csstransforms3d .shifter-active.shifter-open .shifter-navigation {
+.no-csstransforms3d .shifter-enabled.shifter-open .shifter-navigation {
   right: 0;
 }
-.no-csstransforms3d .shifter-active.shifter-left.shifter-open .shifter-page {
+.no-csstransforms3d .shifter-enabled.shifter-left.shifter-open .shifter-page {
   left: auto;
   right: -270px;
 }
-.no-csstransforms3d .shifter-active.shifter-left.shifter-open .shifter-navigation {
+.no-csstransforms3d .shifter-enabled.shifter-left.shifter-open .shifter-navigation {
   left: 0;
 }
