--- a/src/jquery.fs.shifter-styles.less
+++ b/src/jquery.fs.shifter-styles.less
@@ -20,9 +20,9 @@
 			display: none;
 		}
 
-		// active
+		// enabled
 
-		&-active &-page {
+		&-enabled &-page {
 			min-height: 100%;
 
 			position: relative;
@@ -34,16 +34,11 @@
 			overflow: hidden;
 		}
 
-		&-active&-left &-page {
+		&-enabled&-left &-page {
 			box-shadow: -(@shifter-page-box-shadow-blur) 0 @shifter-page-box-shadow-blur @shifter-page-box-shadow-color;
 		}
 
-		&-active &-page,
-		&-active &-header {
-			transform: translate3D(0, 0, 0);
-		}
-
-		&-active &-navigation {
+		&-enabled &-navigation {
 			width: @shifter-nav-width;
 			height: 100%;
 
@@ -53,19 +48,27 @@
 
 			background: @shifter-nav-background;
 			display: block;
-			opacity: 1;
+			// opacity: 1;
 			overflow: auto;
 			pointer-events: none;
+			transition:
+				opacity 0.001s linear @shifter-transition-speed, // delay when closing
+				transform @shifter-transition-speed @shifter-transition-timing;
 		}
 
-		&-active &-page,
-		&-active &-header,
-		&-active &-navigation {
+		&-enabled &-page,
+		&-enabled &-header,
+		&-enabled &-navigation {
 			backface-visibility: hidden;
+		}
+
+		&-enabled &-page,
+		&-enabled &-header {
+			transform: translate3D(0, 0, 0);
 			transition: transform @shifter-transition-speed @shifter-transition-timing;
 		}
 
-		&-active &-handle {
+		&-enabled &-handle {
 			width: @shifter-handle-width;
 			height: @shifter-handle-height;
 
@@ -101,7 +104,7 @@
 
 		// right (default)
 
-		&-active &-navigation {
+		&-enabled &-navigation {
 			right: 0;
 
 			transform: translate3D(0, 0, 0);
@@ -114,54 +117,58 @@
 
 		// left
 
-		&-active&-left &-navigation {
+		&-enabled&-left &-navigation {
 			left: 0;
 
 			transform: translate3D(0, 0, 0);
 		}
 
-		&-active&-left&-open &-page,
-		&-active&-left&-open &-header {
+		&-enabled&-left&-open &-page,
+		&-enabled&-left&-open &-header {
 			transform: translate3D(@shifter-nav-width, 0, 0);
 		}
 
 		// open
 		&-open &-navigation {
+			opacity: 1;
 			pointer-events: all;
 			transform: translate3D(0, 0, 0);
+			transition:
+				opacity 0.001s linear 0s, // no delay when opening
+				transform @shifter-transition-speed @shifter-transition-timing;
 		}
 
 
 		// IE8 / 9 - no 3d transforms
 
-		.no-csstransforms3d &-active&-navigation {
+		.no-csstransforms3d &-enabled&-navigation {
 			right: -@shifter-nav-width;
 		}
 
 		// left
 
-		.no-csstransforms3d &-active&-left &-navigation {
+		.no-csstransforms3d &-enabled&-left &-navigation {
 			left: -@shifter-nav-width;
 		}
 
 		// open
 
-		.no-csstransforms3d &-active&-open &-page {
+		.no-csstransforms3d &-enabled&-open &-page {
 			left: -@shifter-nav-width;
 		}
 
-		.no-csstransforms3d &-active&-open &-navigation {
+		.no-csstransforms3d &-enabled&-open &-navigation {
 			right: 0;
 		}
 
 		// open left
 
-		.no-csstransforms3d &-active&-left&-open &-page {
+		.no-csstransforms3d &-enabled&-left&-open &-page {
 			left: auto;
 			right: -@shifter-nav-width;
 		}
 
-		.no-csstransforms3d &-active&-left&-open &-navigation {
+		.no-csstransforms3d &-enabled&-left&-open &-navigation {
 			left: 0;
 		}
 
